--- a/TicketManagementSystem/src/assets/TicketCard.scss
+++ b/TicketManagementSystem/src/assets/TicketCard.scss
@@ -13,7 +13,7 @@
   .card-content{
     background-color: rgb(251, 251, 247);
     padding: 12px;
-    height:min-content;
+    height:max-content;
 
     label{
       margin-top:10px;
