--- a/TicketManagementSystem/src/index.css
+++ b/TicketManagementSystem/src/index.css
@@ -4,7 +4,8 @@
   font-weight: 400;
   display:flex;
   justify-content: center;
-  background-color: #427aa1;
+  /* background-color: #427aa1; */
+  background-color: #2b4570;
   color:rgb(87, 88, 87);
 }
 
